lib/src/compiler/tests/testdata/errors/117.out
error[E031]: unexpected escape sequence
 --> line:3:23
  |
3 |     $a = "foo" base64("foo\x00")
  |                       ^^^^^^^^^ escape sequences are not allowed in this string
  |